--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <style>
-        table{
-            border: 1px solid black
-        }
-        th, td{
-            border: 1px solid black;
-            text-align: left;
-        }
+        
     </style>
+    <link rel="stylesheet" href="../lab3/style.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -104,6 +99,9 @@
         </tr>
     </table>
    
+
+
+
 
 
 
