--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </tr>
     </table>
    
-    <img src="image/mamad.jpeg" alt="" style="width:150px;height:190px">
+    <img src="image/mamad.jpeg" alt="">
     
     <button type="button" class="collapsible">My hobby +</button>
     <div class="content">
