--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <th>Name</th>
             <td>Muhammad bin Sh Salleh</td>
             <th>Photo</th>
-            <td><img src="image/mamad.jpeg" alt="" style="width:150px;height:190px">![](images/mamad.JPEG)</td>
+            <td><img src="image/mamad.jpeg" alt="" style="width:150px;height:190px">![](image/mamad.JPEG)</td>
            
         </tr>
 
