--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <th>Name</th>
             <td>Muhammad bin Sh Salleh</td>
             <th>Photo</th>
-            <td><img src="image/mamad.jpeg" alt="" style="width:150px;height:190px">![](image/mamad.JPEG)</td>
+            <td><img src="image/mamad.jpeg" alt="" style="width:150px;height:190px"></td>
            
         </tr>
 
@@ -103,8 +103,6 @@
             <td>Nothing much but will try my best to gain knowledges to get the suit job for me</td>
         </tr>
     </table>
-   
-    <img src="image/mamad.jpeg" alt="">
     
     <button type="button" class="collapsible">My hobby +</button>
     <div class="content">
